# mycpp1

./: CMakeLists.txt  MyClass.cpp  MyClass.h  README.md  main.cpp
